# t2k-nd280-upgrade

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README  README.md  SourceGEANT4.sh  T2KND280Up.sh  T2KND280Up_CLHEP.csh  T2KND280Up_CLHEP.sh  env_setup.sh  t2k_nd280-upgrade.code-workspace
OLD/src/app/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  visExample.cpp
src/app/EffStudy/: #configuration.xml#  CMakeLists.txt  EffStudyApp.cxx  Main.cc  bline_vis.mac  configuration.xml  configuration.xml.root  configuration_30cm.xml  configuration_30cm.xml~  configuration_60cm.xml  configuration_60cm.xml~  configuration_cluster.xml  configuration_cluster.xml~  configuration_cluster_30cm.xml  vis.mac  vis_cluster.mac
src/app/EffStudy/Benjamin/: readme
src/app/EffStudy/config/: 04242020.xml  FinalDesign.xml  TDR.xml  config_190918_withMM.xml  configuration.xml  configuration_30cm.xml  configuration_30cm_width1807mm.xml  configuration_30cm_width1807mm_T.xml  configuration_CDR.xml  configuration_classic.xml  configuration_classic_ecal.xml  configuration_classic_neut.xml  configuration_classic_nue.xml  configuration_classic_numubar.xml  configuration_cluster.xml  configuration_cluster_30cm.xml  configuration_cluster_30cm_width1807mm.xml  configuration_cluster_30cm_width1807mm_T.xml  configuration_cluster_30cm_width1807mm_numubar.xml  configuration_cluster_classic.xml  configuration_cluster_classic_ecal.xml  configuration_cluster_classic_nue.xml  configuration_cluster_classic_numubar.xml  configuration_cluster_current.xml  configuration_cluster_current_ecal.xml  configuration_cluster_current_ecal_nue.xml  configuration_cluster_current_ecal_rhc_nuebar.xml  configuration_cluster_current_ecal_rhc_numu.xml  configuration_cluster_current_ecal_rhc_numubar.xml  configuration_cluster_ftpc_targ_2fgd.xml  configuration_cluster_ftpc_targ_2fgd_ecal.xml  configuration_cluster_ftpc_targ_2fgd_ecal_rhc_numu.xml  configuration_cluster_ftpc_targ_2fgd_ecal_rhc_numu.xml~  configuration_cluster_ftpc_targ_2fgd_ecal_rhc_numubar.xml  configuration_cluster_nd280current.xml  configuration_cluster_outfv.xml  configuration_cluster_ref.xml  configuration_cluster_ref_ecal.xml  configuration_cluster_ref_ecal_rhc_numu.xml  configuration_cluster_ref_ecal_rhc_numubar.xml  (+17 more)
src/app/EffStudy/include/: #ExN02Constants.hh#  #ExN02ND280XML.hh#  #ExN02VertexInfo.hh#  Const.hh  ExN02ActionInitialization.hh  ExN02Constants.hh  ExN02DetectorConstruction.hh  ExN02DetectorMessenger.hh  ExN02EventAction.hh  ExN02ExtraPhysics.hh~  ExN02FieldMessenger.hh  ExN02FieldSetup.hh  ExN02ND280XML.hh  ExN02PhysicsList.hh  ExN02PrimaryGeneratorAction.hh  ExN02PrimaryGeneratorMessenger.hh  ExN02PrimaryGeneratorMessenger.hh~  ExN02RooTrackerKinematicsGenerator.hh  ExN02RunAction.hh  ExN02StepMax.hh~  ExN02StepMaxMessenger.hh  ExN02SteppingAction.hh  ExN02TrackerHit.hh  ExN02TrackerSD.hh  ExN02VertexInfo.hh  ND280BeamConstructor.hh  ND280HitSegment.hh~  ND280PersistencyManager.hh  ND280RootPersistencyManager.hh  ND280Trajectory.hh~  ND280TrajectoryPoint.hh  ND280TrajectoryPoint.hh~  ND280UserStackingAction.hh  ND280VolumeID.hh  ND280XMLPersistencyManager.hh~
src/app/EffStudy/mac/: vis.mac  vis_UpgradeFinalDesign.mac  vis_cluster.mac  vis_cluster_nd280current.mac  vis_cluster_proto.mac  vis_nd280current.mac  vis_pgun.mac  vis_test.mac  vis_test.mac~
src/app/EffStudy/nd280mc/: ND280BasketConstructor.cc  ND280BasketConstructor.hh  ND280BeamConstructor.cc  ND280ComponentConstructor.hh  ND280Constructor.cc  ND280Constructor.hh  ND280ExtrudedScintConstructor.cc  ND280GapConstructor.cc  ND280IBeamConstructor.cc  ND280ModuleConstructor.cc  ND280OffAxisConstructor.cc  ND280ScintLayerConstructor.cc  ND280StructuralBeamConstructor.cc  ND280UA1ClamConstructor.cc  ND280UA1ClamConstructor.hh  ND280UA1CoilConstructor.cc  ND280UA1FluxReturnConstructor.cc  ND280UA1MRDArmConstructor.cc  ND280UA1MRDSideConstructor.cc  ND280UA1MagnetConstructor.cc
src/app/EffStudy/src/: #ExN02StepMax.cc#  #ExN02TrackerSD.cc#  #ND280PersistencyManager.cc#  ExN02ActionInitialization.cc  ExN02ActionInitialization.hh  ExN02ChamberParameterisation.cc  ExN02Constants.hh  ExN02DetectorConstruction.cc  ExN02DetectorConstruction.hh  ExN02DetectorMessenger.cc  ExN02EventAction.cc  ExN02EventAction.hh  ExN02ExtraPhysics.cc  ExN02ExtraPhysics.hh  ExN02FieldMessenger.cc  ExN02FieldMessenger.cc~  ExN02FieldMessenger.hh  ExN02FieldSetup.cc  ExN02FieldSetup.cc~  ExN02ND280XML.cc  ExN02ND280XML.hh  ExN02PhysicsList.cc  ExN02PrimaryGeneratorAction.cc  ExN02PrimaryGeneratorAction.hh  ExN02PrimaryGeneratorMessenger.cc  ExN02PrimaryGeneratorMessenger.hh  ExN02RooTrackerKinematicsGenerator.cc  ExN02RooTrackerKinematicsGenerator.hh  ExN02RunAction.cc  ExN02StepMax.cc  ExN02StepMax.hh  ExN02SteppingAction.cc  ExN02SteppingAction.hh  ExN02SteppingVerbose.cc  ExN02TrackerHit.cc  ExN02TrackerHit.hh  ExN02TrackerSD.cc  ExN02VertexInfo.cc  ExN02VertexInfo.hh  MyND280BeamConstructor.cc  (+17 more)
src/app/ND280Upgrade/: .DAWN_1.history  Main.cc~  vis.mac  vis.mac~
src/app/ND280Upgrade/include/: ExN02DetectorConstruction.hh  ExN02DetectorConstruction.hh~  ExN02PhysicsList.hh  ExN02TrackerHit.hh  ExN02TrackerSD.hh
src/app/ND280Upgrade/src/: #ExN02TrackerHit.cc#  (+6 more)
src/app/Reconstruction/: CMakeLists.txt  Main.cc  Main.cc~  ReconstructionApp.cxx  ReconstructionMain.cxx
src/app/nd280UpEvent/: CMakeLists.txt  Event.cc  Event.hh  Hit.cc  Hit.hh  LinkDef.h  LinkDef.h~  ND280SFGDEvent.cc  ND280SFGDEvent.hh  ND280SFGDHit.cc  ND280SFGDHit.hh  ND280SFGDTrack.cc  ND280SFGDTrack.hh  ND280SFGDVoxel.cc  ND280SFGDVoxel.hh  ND280SFGDVoxelSet.cc  ND280SFGDVoxelSet.hh  TND280UpEvent.cc  TND280UpEvent.cc~  TND280UpEvent.hh  TND280UpEvent.hh~  TND280UpEvent_cc.d  TND280UpHit.cc  TND280UpHit.hh  TND280UpRecoEvent.cc  TND280UpRecoEvent.hh  TND280UpRecoTrack.cc  TND280UpRecoTrack.hh  TND280UpTrack.cc  TND280UpTrack.hh  TND280UpTrackPoint.cc  TND280UpTrackPoint.hh  TND280UpTrackPoint_cc.d  TND280UpTrack_cc.d  TND280UpVertex.cc  TND280UpVertex.hh  TND280UpVertex_cc.d  dict.cc  dict.h  make_dict.sh
(+1472 files in other folders)
